--- a/.github/workflows/firstWorkflow.yml
+++ b/.github/workflows/firstWorkflow.yml
@@ -7,14 +7,14 @@ jobs:
   first_job:
     runs-on: ubuntu-latest
     steps:
-      name: firstJob script
-      run: echo Hello from the first job
+      - name: firstJob script
+        run: echo Hello from the first job
       
   second_job:
     runs-on: ubuntu-latest
     steps:
-      name: secondJob script
-      shell: bash
-      run: |
-        echo this is the second job
-        echo and a multiline script
+      - name: secondJob script
+        shell: bash
+        run: |
+          echo this is the second job
+          echo and a multiline script
