--- a/.github/workflows/firstWorkflow.yml
+++ b/.github/workflows/firstWorkflow.yml
@@ -1,4 +1,6 @@
 name: first workflow
+env:
+  WORKFLOW_VAR: "This variable is declared at the workflow level"
 
 on:
   workflow_dispatch:
@@ -23,9 +25,24 @@ jobs:
       
   second_job:
     runs-on: ubuntu-latest
+    needs: first_job
+    env:
+      JOB_VAR: "this is a job variable"
     steps:
       - name: secondJob script
         shell: bash
         run: |
           echo this is the second job
           echo and a multiline script
+      - name: environment variables
+        env:
+          STEP_VAR: "This variable is declared at the step level"
+        run: |
+          echo $WORKFLOW_VAR
+          echo $JOB_VAR
+          echo $STEP_VAR
+          echo "The following is a secret: ${{ secrets.SOME_SECRET }}, of course, I cant tell you because then it wouldnt be a secret..."
+          echo "The following are default environment variables:"
+          echo $GITHUB_ACTOR
+          echo $GITHUB_JOB
+          echo $GITHUB_REF
